--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "body-parser": "^1.20.3",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
     "docx-templates": "^4.13.0",
