--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npx nodemon index.js",
-    "start": "node index.js"
+    "serve": "npx nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.3",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "docx-templates": "^4.13.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
